Remove margin from navigation to prevent jumpy transition

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -95,7 +95,6 @@
 
   .site-nav-links {
     text-align: center;
-    margin-bottom: 15px;
 
     li {
       display: block;
